public class Sede {
    private int NPA;
    private String marca;
    private String targa;

}
